--- a/.gitmodules
+++ b/.gitmodules
@@ -1,24 +1,4 @@
+
 [submodule "sim"]
 	path = sim
-	url = git@github.com:Zeroth-Robotics/sim.git
-[submodule "runtime/firmware/tpu-sdk-sg200x"]
-	path = runtime/firmware/tpu-sdk-sg200x
-	url = https://github.com/milkv-duo/tpu-sdk-sg200x.git
-[submodule "runtime/firmware/duo-sdk"]
-	path = runtime/firmware/duo-sdk
-	url = https://github.com/milkv-duo/duo-sdk.git
-[submodule "runtime/models/tpu-mlir"]
-	path = runtime/models/tpu-mlir
-	url = https://github.com/milkv-duo/tpu-mlir.git
-[submodule "runtime/tonic"]
-	path = runtime/tonic
-	url = https://github.com/hyperium/tonic.git
-[submodule "client-py"]
-	path = client-py
-	url = https://github.com/zeroth-robotics/client-py
-[submodule "docs"]
-	path = docs
-	url = https://github.com/zeroth-robotics/docs
-[submodule "buildroot"]
-	path = buildroot
-	url = https://github.com/zeroth-robotics/buildroot
+	url = git@github.com:BigJohnn/sim.git
