--- a/kos-zbot/Cargo.toml
+++ b/kos-zbot/Cargo.toml
@@ -11,12 +11,12 @@ description = "KOS platform for Zeroth-01"
 kos = "0.7.5"
 async-trait = "0.1"
 eyre = "0.6"
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
+serde = { version = "1.0.218", features = ["derive"] }
+serde_json = "1.0.139"
 tonic = { version="0.12", git = "https://github.com/hatomist/tonic-milkv" }
 tonic-build = { git = "https://github.com/hatomist/tonic-milkv", package = "tonic-build" }
 tokio = { version = "1", features = ["full"] }
-imu = "0.2"
+imu = "0.3.1"
 i2cdev = "0.6.1"
 tracing = "0.1"
 tracing-subscriber = "0.3"
@@ -25,5 +25,6 @@ lazy_static = "1.5"
 uuid = { version = "1.12", features = ["v4"] }
 
 [patch.crates-io]
-tonic = { git = "https://github.com/hatomist/tonic-milkv" }
-tonic-build = { git = "https://github.com/hatomist/tonic-milkv", package = "tonic-build" }
+#tonic = { git = "https://github.com/hatomist/tonic-milkv" }
+#tonic-build = { git = "https://github.com/hatomist/tonic-milkv", package = "tonic-build" }
+kos = { path = "../../kos/kos", version = "0.7" }
